--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
   "dependencies": {
     "@polkadot/api": "^0.81.1",
     "@polkadot/keyring": "^1.1.1",
-    "@polkadot/wasm-crypto": "^0.13.1",
     "@polkadot/util": "^1.1.1",
+    "@polkadot/wasm-crypto": "^0.13.1",
     "bip39": "^2.5.0",
     "blakejs": "^1.1.0",
     "dotenv": "^8.1.0",
     "node-localstorage": "^1.3.1",
-    "socket.io": "^2.2.0",
     "oo7-substrate": "^0.8.0",
+    "socket.io": "^2.2.0",
     "tweetnacl": "^1.0.1",
-    "tweetnacl-util": "^0.15.0"
+    "tweetnacl-util": "^0.15.0",
+    "uuid": "^3.4.0"
   }
 }
