Async-await support

--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
   },
   "babel": {
     "presets": [
-      "env"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "keywords": [
