Updated package.json to include support for spread operator

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "faucet": "nodemon --watch faucet/src/  --verbose --exec ./node_modules/.bin/babel-node ./src/index.js --ext js --presets env"
   },
   "babel": {
+    "plugins": [
+      "babel-plugin-transform-class-properties",
+      "babel-plugin-transform-object-rest-spread"
+    ],
     "presets": [
       [
         "env",
@@ -40,6 +44,8 @@
     "@polkadot/keyring": "^1.8.1",
     "@polkadot/util": "^1.8.1",
     "@polkadot/wasm-crypto": "^0.14.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bip39": "^2.5.0",
     "blakejs": "^1.1.0",
     "dotenv": "^8.1.0",
