--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bip39": "^2.5.0",
     "blakejs": "^1.1.0",
     "dotenv": "^8.1.0",
+    "nano": "^9.0.3",
     "node-localstorage": "^1.3.1",
     "socket.io": "^3.0.4",
     "tweetnacl": "^1.0.1",
