--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^8.1.0",
     "nano": "^9.0.3",
     "node-localstorage": "^1.3.1",
+    "rxjs": "^7.5.4",
     "socket.io": "^3.0.4",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0",
