--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Totem Faucet",
   "main": "index.js",
   "scripts": {
-    "faucet": "nodemon --watch faucet/src/  --verbose --exec ./node_modules/.bin/babel-node ./src/index.js --ext js --presets env"
+    "faucet": "nodemon --watch ./src/  --verbose --exec ./node_modules/.bin/babel-node ./src/index.js --ext js --presets env"
   },
   "babel": {
     "plugins": [
